[FIX] website, website_blog: fix dynamic snippets visibility
Steps to reproduce [18.2+]:

1. Add a dynamic snippet to a website page (e.g., Events).

2. Unpublish all event records.

3. The snippet first appears with a visible header, which then
disappears.

[A]- Starting from [1], the `o_dynamic_empty` class was introduced to
handle the dynamic snippets visibility, and an upgrade script (see [3])
set this class by default on them.

Later in 18.0 (after [2]), the class was changed to `s_dynamic_empty` in
the XML template, while on the JS side, the class used to toggle snippet
visibility was `o_dynamic_snippet_empty`. This class was also added to
snippets on destroy (before saving).

And since `18.2`, `o_dynamic_snippet_empty` is handled via the interaction’s
dynamic content, meaning it is cleaned up on destroy and only the class added
in XML (`s_dynamic_empty`) remains.

In `19.0`, this code was adapted again to completely remove the
`o_dynamic_snippet_empty` and snippets started with no visibility class.

[B]- As a result, a dynamic snippet may end up with:

1. `o_dynamic_empty`: for snippets created before `18.0` and never edited.

2. `o_dynamic_empty` & `o_dynamic_snippet_empty`: for snippets from before
`18.0` and edited in `18.0`.

3. `s_dynamic_empty` & `o_dynamic_snippet_empty`: for snippets created in
`18.0` and never edited.

4. `s_dynamic_empty`: for snippets created in `18.2`.

5. No visibility class: for snippets created starting from `19.0`.

Remark: the `s_dynamic_empty` class was introduced in `18.0` by mistake and
does not have any associated CSS

Since only `o_dynamic_snippet_empty` has `display: none` in CSS, the
interaction flow became inconsistent (starting from `18.2`): snippets were
initially visible, then hidden if no content was found... which caused
the flickering behavior described above.

And because of [B], old snippets with the `o_dynamic_empty` class
will be visible by default in `18.0`.

This commit restores the intended (and original)

--- a/addons/website/static/src/snippets/s_dynamic_snippet/000.scss
+++ b/addons/website/static/src/snippets/s_dynamic_snippet/000.scss
@@ -1,12 +1,17 @@
 .s_dynamic {
     // TODO Dynamic snippet loading style: Temporarily disabled in preview mode
     // since it needs interactions to be available.
-    #wrap &.o_dynamic_snippet_empty:not(.o_check_scroll_position) {
-        section:not(.s_dynamic_snippet_holder) {
-            display: none !important;
+    body:not(.editor_enable) #wrap &:not(.o_check_scroll_position) {
+        &.o_dynamic_snippet_loading {
+            section:not(.s_dynamic_snippet_holder) {
+                display: none !important;
+            }
+            .s_dynamic_snippet_holder {
+                display: block !important;
+            }
         }
-        .s_dynamic_snippet_holder {
-            display: block !important;
+        &:not(.o_dynamic_snippet_loading):has(.dynamic_snippet_template:empty) {
+            display: none !important;
         }
     }
     [data-url] {
